2001-10-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/message.el (message-send-news): Modify the value of
	`mime-field-encoding-method-alist' to encode newsgroup names.

	* lisp/gnus-art.el (gnus-article-header-presentation-method): Call
	`article-decode-group-name' to decode newsgroup names.
	(gnus-article-decode-hook): Default to nil.

2001-10-06 08:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* Makefile.in (uninstall): Add.

	* etc/Makefile.in (uninstall): Add.

2001-10-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/message.el (message-fix-before-sending): Don't expose
	invisible MIME parts; don't use `message-find-invisible-regions'.
	(message-find-invisible-regions): Remove.
	(invisible-region): Advise the function to add the text property
	`mime-edit-invisible'.
	(message-invisible-region): Remove.
	(message-save-drafts): Copy all the text properties from the
	editing buffer to the encoding buffer.
	(message-send): Ditto.

2001-10-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/nndoc.el (nndoc-oe-dbx-type-p): Use `string-as-multibyte'
	instead of `mm-string-as-multibyte'.
	(nndoc-possibly-change-buffer): Use `nnheader-insert-file-contents'
	instead of `mm-insert-file-contents'.

2001-09-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus-vers.el (gnus-revision-number): Increment to 08.

2001-09-27 14:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* aclocal.m4 (GNUS_CHECK_FONTS): Typo. Use /dev/null as latex input.

2001-09-27 09:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* aclocal.m4, configure.in: Check commercial fonts.

2001-09-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/message.el (message-find-invisible-regions): Look for the
	text-property `mime-edit-invisible' as well as `message-invisible'.
	(message-save-drafts): Copy the text-property `mime-edit-invisible'
	from the message editing buffer to the encoding buffer.
	(message-send): Ditto.

2001-09-27  Katsuhiro Hermit Endo  <hermit@koka-in.org>
